# SDAnalyst

./: .gitignore  CMakeLists.txt  CMakeLists_optimized.txt  OPTIMIZATION_SUMMARY.md  README.md  REFACTOR_STATUS.md  connect_pico.ps1  flash_pico.sh  optimization_request.txt
build_enhanced/: sdanalyst.dis  sdanalyst.elf  sdanalyst.elf.map  sdanalyst.hex
build_enhanced/pico-sdk/src/rp2040/boot_stage2/: bs2_default.dis  bs2_default.elf  bs2_default.elf.map  bs2_default_padded_checksummed.S
build_enhanced/pico-sdk/src/rp2_common/pico_cyw43_driver/pioasm/tmp/: pioasmBuild-cfgcmd.txt
build_enhanced/picotool/tmp/: picotoolBuild-cfgcmd.txt
build_optimized/: sdanalyst.dis  sdanalyst.elf  sdanalyst.elf.map  sdanalyst.hex
build_optimized/pico-sdk/src/rp2040/boot_stage2/: bs2_default.dis  bs2_default.elf  bs2_default.elf.map  bs2_default_padded_checksummed.S
build_optimized/pico-sdk/src/rp2_common/pico_cyw43_driver/pioasm/tmp/: pioasmBuild-cfgcmd.txt
build_optimized/picotool/tmp/: picotoolBuild-cfgcmd.txt
src/: fatfs_disk.c  main.c  main_optimized.c  main_original.c  partition_display.c.broken  partition_display_fixed.c  sd_card.c  test_simple.c
